--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/login.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <script src="js/login.js"></script>
   <title>Diga Diga Signup</title>
 </head>
 
@@ -32,7 +31,7 @@
           
         </form>
         <div class="form-link">
-          <span>Already have an account? <a href="#" class="link signup-link">Signup</a></span>
+          <span>Already have an account? <a href="#" class="link signup-link" onclick="mostra()">Signup</a></span>
         </div>
       </div>
 
@@ -100,5 +99,6 @@
       </div>
     </div>
   </section>
+  <script src="js/login.js"></script>
 </body>
 </html>
