--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
           
         </form>
         <div class="form-link">
-          <span>Already have an account? <a href="#" class="link signup-link" onclick="mostra()">Signup</a></span>
+          <span>Already have an account? <a href="#" class="link signup-link" onclick="showsignup()">Signup</a></span>
         </div>
       </div>
 
